13-Feb-2011 Issue #31. Opus.Core.File.GetFiles no longer recurses into all subdirectories. Wildcarded subdirectories need to be explicitly specified.

13-Feb-2011 VSSolutionBuilder serialization rewrite, which allows sub-filters for files, so that the disk directory hierarchy is maintained in the VisualStudio project.

11-Feb-2011 Opus.Core.ITargetFilters changed so that Platform, Configuration and Toolchains are specified by named properties. Added abstract Opus.Core.BaseTargetFilteredAttribute which each of the filter attributes derives from; these default to filters of any platforms, any configurations and any toolchain. Specific filters can now be set up via optional named arguments in the attributes.

10-Feb-2011 Added support for Unix/Gcc to Test14

10-Feb-2011 Added testpackages/Test14 to exercise a dynamic library linking against another dynamic library.

10-Feb-2011 Issue #30 Default VisualC debug symbols is set to Embedded to avoid compilation errors with multithreaded builds and PDBs.

10-Feb-2011 Each IModule now has an OwningNode property which is it's associated DependencyNode.
            Injected modules inherit the external dependency from the node that generated them. This ensures correct scheduling in multithreaded builds.
            Output paths are now a required feature of classes derived from Opus.Core.BaseOptionCollection, and are able to filter them via a specified enum whose values are bitfields.
            Modules can implement the Opus.Core.IIdentifyExternalDependencies interface in order to identify dependencies at the start of the graph construction phase.
            Modules that are collections of other modules must implement the Opus.Core.IModuleCollection interface. IModule is included in this.
            Opus.Core.Target.IsComplete has been renamed to Opus.Core.Target.IsFullyFormed. If a Target is not fully formed, equivalence only checks the Platform and Configuration properties.